# deedscout_sarasota

./: .env.example  .gitignore  AGENTS.md  README.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_core_tables.py
apps/api/app/: cli.py  main.py
apps/api/app/agents/: ambiguity_classifier_agent.py  cost_gatekeeper_agent.py  data_quality_agent.py  dedupe_agent.py  final_triage_agent.py  junk_filter_agent.py  spread_scoring_agent.py  triage_types.py
apps/api/app/api/: __init__.py  health.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: session.py
apps/api/app/llm/: azure_foundry_provider.py  azure_openai_provider.py  base.py  github_models_provider.py  mock_provider.py  ollama_provider.py  router.py
apps/api/app/models/: __init__.py  core.py  factories.py
apps/api/app/parsing/: __init__.py  auction_list_parser.py  auction_parser.py  confidence.py  date_parser.py  fixture_paths.py  fixture_replay.py  money_parser.py  parcel_parser.py  status_parser.py
apps/api/app/schemas/: api.py  (+2 more)
apps/api/scripts/: seed_sample.py
apps/api/tests/: test_ambiguity_classifier.py  test_api_endpoints.py  test_auction_list_parser.py  test_config.py  test_fixture_golden.py  test_fixture_import_service.py  test_fixture_replay.py  test_health.py  test_llm.py  test_models.py  test_parsing_confidence.py  test_parsing_money.py  test_parsing_parcel.py  test_parsing_status.py  test_scraper_failures.py  test_scraping.py  test_snapshots.py  test_source_validation.py  test_storage.py  test_tier1_triage.py
(+67 files in other folders)
